--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "sana-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
-    "mongoose": "^7.8.7",
-    "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.17.2"
+    "multer": "^1.4.5",
+    "mongoose": "^7.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "cookie-session": "^2.0.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
