--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1"
     "mongoose": "^7.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
