--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "sana-backend",
   "version": "1.0.0",
+  "description": "Backend for Sana Tailor App",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "1.4.5-lts.1",
-    "mongoose": "^7.0.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.0.0",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
