--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "cookie-session": "^2.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "dotenv": "^16.3.1"
   }
 }
