--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport-google-oauth20": "^2.0.0",
     "cookie-session": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3"
   }
 }
